2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* tools/m4/convert_m4.hg: Use _CONVERT_CONST_REFPTR_TO_P_SUN() instead 
	of _CONVERT_CONST_REFPTR_TO_P(), to hopefully fix the SUN Forte build 
	problems in bug #154973.

2004-11-30  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus_and_toolbars: Applied Fredrik Arnerup's patch 
	to add a non-stock icon, with some changes.

2004-11-30  Murray Cumming  <murrayc@murrayc.com>
 
 	* atk/src/hyperlink.hg: get_object(),
 	* atk/src/object.hg: get_relation_set(),
 	* gdk/src/cursor.hg: get_display(),
 	* gdk/src/display.hg: get_default_group(),
 	* gdk/src/displaymanager.hg: get_default_display(),
 	* gdk/src/drawable.hg: get_screen(), get_display(),
 	* gdk/src/event.hg: get_screen(),
 	* gdk/src/visual.hg: get_system(), get_best(), get_screen(),
 	* gtk/src/widget.hg: get_default_style()

2004-11-25  Chris Vine  <cvine@freeserve.co.uk>

	* example/book/input/: This now works.

2004-11-25  Murray Cumming  <murrayc@murrayc.com>

	* docs/tut/gtkmm-tut.xml: TreeView selection: Use 
	selected_foreach_iter() instead of selected_foreach(). Error 
	found by Teus Benschop.

2004-11-24  Murray Cumming  <murrayc@murrayc.com>

	* demos/gtk-demo/: Added missing demo-common.[h|cc] files.
	* gtk/src/treeview.hg, gdk/src/pixbuf.hg, : Removed extra ; and 
	unused parameter to fix build for g++ 3.4.

2004-11-21  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/dialog.[hg|ccg]: Added set_alternative_button_order().
	* gtk/src/button.[hg|ccg]: Added set/get_image() and property.

2004-11-17  Murray Cumming  <murrayc@murayc.com>

	* gtk/src/iconinfo.[hg|ccg]: Added operator bool(), needed to check 
	the result of IconTheme::lookup_icon(). Bug #143018.

2004-11-16  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Mention Gtk::manage() in the Basics/
	Widgets section, with a link to the Memory Management chapter, so that 
	people have an explanation of manage() before it is used in examples. 
	Bug #138248.
