@@ -7,7 +7,7 @@ files_win32_hg =
 files_general_hg = attributes.hg attriter.hg attrlist.hg color.hg context.hg coverage.hg \
 	font.hg fontdescription.hg fontface.hg fontfamily.hg fontmap.hg fontmetrics.hg fontset.hg \
 	glyph.hg glyphstring.hg item.hg language.hg layout.hg layoutiter.hg layoutline.hg layoutrun.hg \
-	rectangle.hg tabarray.hg
+	rectangle.hg renderer.hg tabarray.hg
 files_general_deprecated_hg =
 
 
