@@ -29,6 +29,7 @@
 #include <pangomm/fontmap.h>
 #include <pangomm/item.h>
 #include <pangomm/attrlist.h>
+#include <pangomm/types.h> //For Matrix
 #include <pango/pango-context.h>
 
 _DEFS(pangomm,pango)
@@ -102,6 +103,9 @@ public:
   _WRAP_METHOD(void set_language(const Language& language), pango_context_set_language)
   _WRAP_METHOD(void set_base_dir(Direction direction), pango_context_set_base_dir)
   _WRAP_METHOD(Direction get_base_dir() const, pango_context_get_base_dir)
+
+  _WRAP_METHOD(void set_matrix(const Matrix& matrix), pango_context_set_matrix )
+  //TODO: _WRAP_METHOD(Matrix get_matrix() const, pango_context_get_matrix)
 
   /** Breaks a piece of text into segments with consistent directional level and shaping engine.
    * Each byte of @a text will be contained in exactly one of the items in the returned list.
