@@ -37,6 +37,12 @@ public:
   _WRAP_METHOD(int get_descent() const, pango_font_metrics_get_descent)
   _WRAP_METHOD(int get_approximate_char_width() const, pango_font_metrics_get_approximate_char_width)
   _WRAP_METHOD(int get_approximate_digit_width() const, pango_font_metrics_get_approximate_digit_width)
+
+  _WRAP_METHOD(int get_underline_position() const, pango_font_metrics_get_underline_position)
+  _WRAP_METHOD(int get_underline_thickness() const, pango_font_metrics_get_underline_thickness)
+  _WRAP_METHOD(int get_strikethrough_position() const, pango_font_metrics_get_strikethrough_position)
+  _WRAP_METHOD(int get_strikethrough_thickness() const, pango_font_metrics_get_strikethrough_thickness)
+
 };
 
 } //namespace Pango
