@@ -22,6 +22,8 @@
     '("scale" "PANGO_ATTR_SCALE" "15")
     '("fallback" "PANGO_ATTR_FALLBACK" "16")
     '("letter-spacing" "PANGO_ATTR_LETTER_SPACING" "17")
+    '("underline-color" "PANGO_ATTR_UNDERLINE_COLOR" "18")
+    '("strikethrough-color" "PANGO_ATTR_STRIKETHROUGH_COLOR" "19")
   )
 )
 
@@ -154,6 +156,19 @@
   (values
     '("gsub" "PANGO_OT_TABLE_GSUB" "0")
     '("gpos" "PANGO_OT_TABLE_GPOS" "1")
+  )
+)
+
+;; From /home/murrayc/cvs/gnome210/pango/pango/pango-renderer.h
+
+(define-enum-extended RenderPart
+  (in-module "Pango")
+  (c-name "PangoRenderPart")
+  (values
+    '("foreground" "PANGO_RENDER_PART_FOREGROUND" "0")
+    '("background" "PANGO_RENDER_PART_BACKGROUND" "1")
+    '("underline" "PANGO_RENDER_PART_UNDERLINE" "2")
+    '("strikethrough" "PANGO_RENDER_PART_STRIKETHROUGH" "3")
   )
 )
 
