@@ -1,6 +1,17 @@
+2004-12-01  Murray Cumming  <murrayc@murrayc.com>
+
+	* pango/pangomm/: Added types.h, for typedefs of simple structs.
+	* pango/src/: Added renderer.[hg|ccg].
+	* pango/src/context.hg: Add get/set_matrix().
+	* pango/src/fontmetrics.hg: Added get_underline_position(), 
+	get_underline_thickness(), get_strikethrough_position(), 
+	get_strikethrough_thickness().
+	* pango/src/pango_enums.defs: Regenerated.
+	* tools/m4/convert_pango.m4: Added Matrix and Layout conversions.
+
 2004-11-30  Murray Cumming  <murrayc@murrayc.com>
 
-	* tools/m4/convert_m4.hg: Use _CONVERT_CONST_REFPTR_TO_P_SUN() instead 
+	* tools/m4/convert_gtk.m4: Use _CONVERT_CONST_REFPTR_TO_P_SUN() instead 
 	of _CONVERT_CONST_REFPTR_TO_P(), to hopefully fix the SUN Forte build 
 	problems in bug #154973.
 
